added exam counter

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tauri + React + TS</title>
+    <link rel="shortcut icon" href="./public/VGC.jpg" type="image/x-icon" />
+    <title>HSC 23 Exam Counter</title>
   </head>
 
   <body>
